--- a/footer.css
+++ b/footer.css
@@ -1,58 +1,90 @@
 
 footer{
-    background-color: black;
-    margin-top: 4%;
+background-color: black;
+margin-top: 50px;
+height: 90px;
+display: flex;
+justify-content: space-around
 }
 
 
 .menu-footer-down-list{
     display: flex;
     justify-content: space-between;
-    margin-left: 15%;
-    width: 20%
+    align-items: center;
+    width: 400px;
+    height: 50px;
 }
 
+.footer-left {
+    border: 3px solid blue;
+    flex:0 0 410px
+}
 
-
+.footer-right {
+    display: flex;
+    align-items: flex-end;
+    border: 3px solid blue;
+    flex:0 0 410px;
+    flex-direction: column;
+}
 
 .logo-down{
-    margin-left: 14% ;
     color: white;
+    font-size: 1.1rem;
+    padding-top: 10px ;
     font-family:'Courier New', Courier, monospace;
+    text-align:start;
     font-weight: bold;
 }
 
 .copyright{
-color: whitesmoke;
-margin-left: 86%;
+    padding-top: 20px;
+color: rgba(151, 150, 150, 0.753);
 }
 
 .social {
     height: 25px;
-    width: 20px;
+    width: 25px;
     cursor: pointer;
-    margin: 0%  90%  2%  90% ;
+    background-size: cover;
+}
+.socials{
+    display: flex;
+    justify-content: space-around;
+    width:150px
 }
 
 .social-facebook {
     background-image: url('/images/icon-facebook.svg');
-    background-size: cover;
+}
+.social-twitter{
+    background-image: url('/images/icon-twitter.svg');
+    width: 27px;
+}
+.social-pinterest{
+    background-image: url('/images/icon-pinterest.svg');
+}
+.social-instagram{
+    background-image: url('/images/icon-instagram.svg');
 }
 
 
 .social::after {
-    bottom: -10px;
+    position: absolute; 
+    bottom: -20px;
     content: "" ;
-    height: 2px;
-    width: 20px;
-    background: white;
-    opacity: 0;
+    height: 3px;
+    width: 0;
+    left: 0;
+    background-color: white;
     transition:  0.3s;
 }
 
 .social:hover::after {
-    opacity: 1;
+    width: 100%;
 }
+
 
 
 
