--- a/header.css
+++ b/header.css
@@ -4,40 +4,39 @@
 overflow-x: hidden;
 padding: 0px;
 margin: 0px;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif sans-serif;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-    .top-logo{
-        margin: 1% 0% 2% 2%;
-        font-family:'Courier New', Courier, monospace;
-        font-weight: bold;
-        font-size: 1.5rem;
-        color: #ebe7e7;
-    }
+.top-logo{ 
+    display: flex;
+    flex-direction: column;
+    
+    background-image: url(./images/logo.svg);
+    background-size: contain ;
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 50px;
+    font-family:'Courier New', Courier,monospace;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #ebe7e7;
+}
     
     .nav-top-menu{
         display: flex;
-        justify-content: space-between;
-        width: 29%;
-        margin-left: 62%;
-        margin-top: -2%;
-        
+        justify-content: flex-end;
     }
+    .nav-item{
+        width: 80px;
+    }
+    
     a {
         font-size: 0.9rem;
         text-decoration: none;
         color: white;
     }
     
-li a ::after {
-    background: #fff;
-    bottom: -20px;
-    content: ' ' ;
-    height: 2px;
-    opacity: 0;
-    transition: opacity  0.3s;
-}
-
+    
 li a:hover{
     text-decoration: underline white;
     cursor: pointer;
@@ -45,29 +44,33 @@ li a:hover{
 }
 
 .bg-img{
-background-image: url(/image-hero.jpg);
+    background:linear-gradient( rgba(20, 0, 14, 0.39) 100%, rgba(20, 15, 15, 0.884)100%), url(/image-hero.jpg);
 height:70vh;
 width: 85%;
 background-repeat: no-repeat;
 background-size: cover;
+position: relative;
 margin: auto;
 }
 
 .immersive-title{
 position: absolute;
-    top: 28%;
-    left: 20%;
-    right: 8%;
+    top: 37%;
+    left: 16%;
+    right: 5%;
     bottom: 0%;
+    width: 600px;
+    height: 240px;
     padding-left: 0.5%;
     letter-spacing: 5px; 
+    border: 2px solid rgb(209, 211, 209);
 }
 
 h1.immersive-title{
     text-transform: uppercase;
-    font-size:3rem;
+    font-size:4rem;
     color: rgba(255, 255, 255, 0.89);
-    font-weight: 500;
+    font-weight:normal;
 }
     
     
