--- a/main.css
+++ b/main.css
@@ -82,6 +82,7 @@ color: whitesmoke;
     
     .img{
         margin-left: 1.5%;
+        border-radius: 8px;
         cursor: pointer;
     }
     
