--- a/main.css
+++ b/main.css
@@ -1,120 +1,163 @@
-.section__image{
-    display: flex;
-    margin: 6% 18% ;
-    width: 35%;
-    height: 2%;
+    .middle__section{
     position: relative;
-}
+    margin: 90px 0px; 
+    }
 
-
-
-.section__paragraph{
-font-size: 1.4rem;
-color: gray;
-}
-
-.section__right{
-    position: absolute;
-    top: 104%;
-    right: 20%;
-color: rgba(10, 0.5, 0,1);
-z-index: 11;
-}
-
-.section__headlines{
-text-transform: uppercase;
-word-spacing: 3px;
-font-size: 2.5rem;
-font-weight: 100;
-}
-
-.section__rectangle--white{
-    position: absolute;
-    left: 45%;
-    top: 105%;
+    .section__image{
     width: 700px;
-    height: 350px;
-    border: 5px solid white;
-    background-color: #fff;
-}
+    height: 510px;
+    }
 
-.container__button--white{
-align-self: flex-start;
-flex: 0 1 140px;
-height:40px ;
-color:black;
-background-color: #fff;
-font-weight: bold;
-cursor: pointer;
-text-decoration: none;
-border-radius: 2px;
-text-transform: uppercase;
-transition:0.4s;
-order: 2;
-}
-
-.container__button--white:hover{
-background-color: black;
-color: whitesmoke;
-}
-.container{
-    display: flex;
-    justify-content: space-around;
-    flex: 0 1 150px;
-}
-
-.container__headlines{
-    display: flex;
-    justify-content: flex-end;
-    flex: 0 1 19%;
-    font-size:1.9rem;
-    text-transform: uppercase;
-    font-weight: normal;
-    letter-spacing: 1px;
+    .section_container{
     position: relative;
+    }
+
+    .section__right{
+    position: absolute;
+    right: 0;
+    left: 45%;
+    padding-bottom: 96px;
+    top: 144px;
+    flex-flow: column wrap;
+    background-color: white;
+    padding-top: 96px;
+    padding-left: 96px;
+
+    }
+
+    .section__paragraph{
+    font-size: 1.6rem;
+    color: gray;
+    }
+
+
+    .section__headlines{
+    margin-top: 0;
+    text-transform: uppercase;
+    word-spacing: 3px;
+    font-size: 3.2rem;
+    font-weight: 100;
+    }
+
+    .section__under__img{
+    margin-top: 256px;
+    }
+
+    .container__button--white{
+    flex:0 1 150px;
+    height:40px ;
+    color:black;
+    background-color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    transition:0.4s;
+    order: 2;
+    margin-right: 16px;
+    }
+
+    .container__button--white:hover{
+    background-color: black;
+    color: whitesmoke;
     }
     
-    .first__column__images , .second__column__images{
+    .container{
     display: flex;
-    justify-content:center;
+    justify-content: space-between;
     }
 
-    .images__item{
+    .container__headlines{
+    font-size:2rem;
+    text-transform: uppercase;
+    font-weight: normal;
+    letter-spacing: 5px;
+    }
+    
+
+    span{
+        display: inline-block;
+    }
+    
+    
+
+    .column__images{
+    display: flex;
+    justify-content:space-between;
+    }
+
+    
+    .absolute{
+    position: absolute;
+    color: white;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    z-index: 1;
+    }
+
+    .image__text--first{
+        left: 15%;
+    }
+    
+    .image__text--first,.image__text--second,.image__text--third,.image__text--fourth{
+    bottom: 8%;
+    }
+
+    .image__text--second {
+    left:22%
+    }
+
+    .image__text--third{
+    left: 15%;
+    }
+    .image__text--fourth{
+    left: 20%;
+    }
+    
+    .image__text--fifth{
+    left: 12%;
+    }
+
+    .image__text--sixth{
+    left: 13%;
+    }
+    .image__text--seventh{
+    left: 17%;
+    }
+    .image__text--eighth{
+    left:  18%;
+    }
+
+    .image__text--fifth, .image__text--sixth, .image__text--seventh , .image__text--eighth{
+    bottom: 6%;
+    }
+
+    .image__item{
+        width: 300px;
+        margin-bottom: 10px;
         transition: filter .5s ease-in-out;
         filter: grayscale(100%)
     }
-    
-    .images__item:hover{
-        transform: translateY(10px);
+
+    .image__item:hover{
+        transform: translateY(10px); 
         filter: none;
     }
-    
-    .images__item::after{
-        background: linear-gradient(to bottom,rgba(0,176,155,0.3),rgba(150,201,61,1));
-        display: block;
-        width: 100%;
-        height:100%;
-        z-index: 2;
-        transition: .5s lin;
-        opacity:1;
-        
-    }
-    
-    
-    .images__item{
+
+    .image__item{
         margin-left: 1%;
         border-radius: 8px;
         cursor: pointer;
     }
+
+    .image--title{
+    position: relative;
+    margin: 0.1% 0.4%;
+    line-height: 29px;
+    }
+
     
-    .second__column__images {
-        margin-top: 1%;
-    }
-    .title-images{
-        font-size: 1.3rem;
-        text-transform: uppercase;
-        color: black
-    }
     
     
     
