--- a/footer.css
+++ b/footer.css
@@ -1,128 +1,109 @@
-footer{
-display: flex;
-flex-direction: column;
-background-color: black;
-height: 120px;
-margin-top: 50px;
-border-radius: 2px;
-padding: 25px;
+footer {
+	display: flex;
+	flex-direction: column;
+	background-color: black;
+	height: 120px;
+	margin-top: 50px;
+	border-radius: 2px;
+	padding: 25px;
 }
 
-.footer__top{
-    display: flex;
-    justify-content: space-around;
-    flex-basis: 50%;
+.footer__top {
+	display: flex;
+	justify-content: space-around;
+	flex-basis: 50%;
+	align-items: center;
 }
 
-.footer__logo{
-    align-self: center;
-    flex-basis: 260px;
-    color: white;
-    font-size: 1.3rem;
-    font-weight: bold;
-    font-family:'Courier New', Courier, monospace;
-    margin: 4px 0;
-    
+.footer__logo {
+	align-self: center;
+	flex-basis: 260px;
+	color: white;
+	font-size: 1.3rem;
+	font-weight: bold;
+	font-family: "Courier New", Courier, monospace;
+	margin: 4px 0;
 }
 
-.footer-bottom{
-    display: flex;
-    justify-content: space-around;
-    align-items: center
+.footer-bottom {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
-.footer__list{
-    display: flex;
-    flex-basis: 400px;
-    margin: 6px 0;
-    justify-content: space-around;
+.footer__list {
+	display: flex;
+	flex-basis: 400px;
+	margin: 6px 0;
+	justify-content: space-around;
 }
 
-.copyright{
-    margin: 4px 0;
-    color: rgba(151, 150, 150, 0.753);
+.copyright {
+	flex-basis: 374px;
+	margin: 4px 0;
+	color: rgba(151, 150, 150, 0.753);
 }
 
-.footer__item{
-    position: relative;
+.footer__item {
+	position: relative;
 }
 
-.footer__item::after{
-        position: absolute; 
-        bottom: -12px;
-        content: "" ;
-        height: 3px;
-        width: 22px;
-        left: 25%;
-        background-color: rgb(184, 181, 181);
-        transition: all 0.5s;
-        opacity: 0;
-    }
-    .footer__item:hover::after{
-        opacity: 1;
-    }
+.footer__item::after {
+	position: absolute;
+	bottom: -12px;
+	content: "";
+	height: 3px;
+	width: 22px;
+	left: 25%;
+	background-color: rgb(184, 181, 181);
+	transition: all 0.5s;
+	opacity: 0;
+}
+.footer__item:hover::after {
+	opacity: 1;
+}
 
-    .social__item {
-        position: relative;
-        height: 25px;
-        width: 25.6px;
-        cursor: pointer;
-        background-size: cover;
-        margin: 0 12px;
-    }
-
-
+.social__item {
+	position: relative;
+	height: 25px;
+	width: 25.6px;
+	cursor: pointer;
+	background-size: cover;
+	margin: 0 12px;
+}
 
 .social-facebook {
-    background-image: url('/images/icon-facebook.svg');
+	background-image: url("/images/icon-facebook.svg");
 }
-.social-twitter{
-    background-image: url('/images/icon-twitter.svg');
-    width: 27px;
+.social-twitter {
+	background-image: url("/images/icon-twitter.svg");
+	width: 27px;
 }
-.social-pinterest{
-    background-image: url('/images/icon-pinterest.svg');
+.social-pinterest {
+	background-image: url("/images/icon-pinterest.svg");
 }
-.social-instagram{
-    background-image: url('/images/icon-instagram.svg');
+.social-instagram {
+	background-image: url("/images/icon-instagram.svg");
 }
 
-
-.social__container{
-    display: flex;
-    justify-content: space-around;
-    margin: 4px 0;
+.social__container {
+	display: flex;
+	justify-content: space-around;
+	margin: 4px 0;
 }
 
 .social__item::after {
-    position: absolute; 
-    bottom: -10px;
-    content: "" ;
-    height: 3px;
-    width: 25px;
-    left: 0;
-    background-color: white;
-    transition: all 0.3s;
-    opacity: 0;
+	position: absolute;
+	bottom: -10px;
+	content: "";
+	height: 3px;
+	width: 25px;
+	left: 0;
+	background-color: white;
+	transition: all 0.3s;
+	opacity: 0;
 }
 
-.social__item:hover::after{
-    opacity: 1;
+.social__item:hover::after {
+	opacity: 1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
