--- a/header.css
+++ b/header.css
@@ -1,104 +1,145 @@
-
-
 body {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Alata', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+	font-family: "Alata", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
-.nav{
-    padding: 40px 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav__logo{ 
-    flex-grow: 1;
-    background-image: url(./images/logo.svg);
-    background-size: contain ;
-    background-repeat: no-repeat;
-    height: 20px;
-    font-size: 2rem;
-    color: #ebe7e7;
-}
-
-
-.nav__list{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.nav__item{
-    margin: 0 20px;
-    position: relative;
-}
-.nav__item:last-child{
-    margin-right:  0;
-}
-
-
-.nav__item::after{
-    position: absolute;
-    content: "";
-    bottom: -10px;
-    left: 11px;
-    width: 20px;
-    height: 2px;
-    background-color: silver;
-    transition: all 0.3s ;
-    opacity: 0;
-}
-
-
-
-.nav__item:hover::after{
-    opacity: 1;
-}
-
 a {
-font-size: 0.9rem;
-text-decoration: none;
-color: white;
+	font-size: 0.9rem;
+	text-decoration: none;
+	color: white;
 }
 ul {
-    margin: 0;
-    padding: 0;
-list-style-type: none; 
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 }
 
-.background__image{
-    display: flex;
-    flex-direction: column;
-background:linear-gradient( rgba(20, 0, 14, 0.39) 100%, rgba(26, 18, 18, 0.884)100%), url(/image-hero.jpg);
-height: 600px;
-background-repeat: no-repeat;
-background-size: 100% auto;
+.header {
+	display: flex;
+	flex-direction: column;
+	background: linear-gradient(
+			rgba(20, 0, 14, 0.39) 100%,
+			rgba(26, 18, 18, 0.884) 100%
+		),
+		url(/image-hero.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	height: 100vh;
 }
 
-.background__title{
-width: 650px;
-height: 250px;
-padding: 20px 0 ;
-font-size: 3.8rem;
-letter-spacing: 5px;
-text-transform:uppercase ;
-text-align: center;
-color: #ffff;
-border: 2px solid rgb(209, 211, 209);
+.nav__desktop {
+	padding: 40px 0;
+	display: flex;
+	justify-content: space-between;
 }
 
-.nav-title-wrapper{
-    display: flex;
-    flex-direction: column;
-    height:100% ;
+.nav__logo {
+	flex-grow: 1;
+	background-image: url(./images/logo.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 20px;
+	color: #ebe7e7;
 }
-.title-wrapper{
-    display: flex;
-    align-items:center;
-    flex-grow: 1;
+.nav__item {
+	margin: 0 20px;
+	position: relative;
+}
+.nav__item:last-child {
+	margin-right: 0;
 }
 
+.nav__item::after {
+	position: absolute;
+	content: "";
+	bottom: -10px;
+	left: 11px;
+	width: 20px;
+	height: 2px;
+	background-color: silver;
+	transition: all 0.3s;
+	opacity: 0;
+}
 
+.nav__item:hover::after {
+	opacity: 1;
+}
 
+.nav__list {
+	display: flex;
+	justify-content: flex-end;
+}
 
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-grow: 1;
+	padding: 0 20px;
+}
+
+.wrapper__title {
+	flex-basis: 100%;
+	font-size: 2rem;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	color: #ffff;
+	border: 2px solid rgb(209, 211, 209);
+	padding: 20px 20px;
+}
+
+@media only screen and (max-width: 1279px) {
+	.header {
+		background: url(./images/mobile/image-hero.jpg);
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+	}
+
+	.nav__desktop {
+		display: none;
+	}
+
+	.nav__mobile {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 5% 5%;
+	}
+
+	.mobile__logo {
+		flex-grow: 1;
+		height: 20px;
+		background-image: url(/images/logo.svg);
+		background-size: contain;
+		background-repeat: no-repeat;
+	}
+}
+
+@media only screen and (min-width: 1280px) {
+	.header {
+		height: 550px;
+		margin-bottom: 90px;
+		padding: 0 calc((100% - 1280px) / 2);
+	}
+
+	.nav__desktop {
+		display: flex;
+	}
+
+	.nav__mobile {
+		display: none;
+	}
+
+	.wrapper {
+		justify-content: flex-start;
+		padding: 0;
+	}
+
+	.wrapper__title {
+		flex-basis: auto;
+		padding-right: 60px;
+		font-size: 3rem;
+	}
+}
