sorting media querry in css file and create social.css

--- a/RWD/item.css
+++ b/RWD/item.css
@@ -1,50 +1,80 @@
+/* https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images */
+
 .items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .item {
-  position: relative;
-  width: 200px;
-  margin-bottom: 10px;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 1280px) {
+    .item {
+        width: 200px;
+    }
 }
 
 .item__image {
-  width: 100%;
-  cursor: pointer;
+    width: 100%;
+    cursor: pointer;
+}
+
+.item__image:not(.mobile) {
+    display: none;
+}
+
+@media only screen and (min-width: 1280px) {
+    .item__image.mobile {
+        display: none;
+    }
+
+    .item__image:not(.mobile) {
+        display: block;
+    }
 }
 
 .item__text {
-  position: absolute;
-  left: 12%;
-  bottom: 0;
-  color: whitesmoke;
-  font-size: 1.1rem;
-  text-transform: uppercase;
+    position: absolute;
+    left: 12%;
+    bottom: 0;
+    color: whitesmoke;
+    font-size: 1.1rem;
+    text-transform: uppercase;
 }
+
 @media only screen and (min-width: 400px) and (max-width: 599px) {
-  .item__image {
-    width: 90%;
-    margin: 0 10px;
-  }
+    .item__image {
+        width: 90%;
+        margin: 0 10px;
+    }
 }
 
 @media only screen and (min-width: 1279px) {
-  .items {
-    justify-content: space-between;
-  }
-  .item {
-    width: 300px;
-    margin-bottom: 20px;
-  }
-  .item__image {
-    border-radius: 8px;
-    transition: 0.5s ease-in-out;
-  }
-  .item__text {
-    left: 12%;
-    bottom: 0;
-    font-size: 1.4rem;
-  }
+    .items {
+        justify-content: space-between;
+    }
+
+    .item {
+        width: 300px;
+        margin-bottom: 20px;
+    }
+
+    .item__image {
+        border-radius: 8px;
+        transition: 0.5s ease-in-out;
+    }
+
+    .item__image:hover {
+        transform: translateY(-10px);
+        opacity: 0.4;
+    }
+
+    .item__text {
+        left: 12%;
+        bottom: 0;
+        font-size: 1.4rem;
+    }
 }
