--- a/main.css
+++ b/main.css
@@ -1,117 +1,135 @@
 .vr__section {
-	/*mobile-first*/
-	margin-top: 80px;
-	margin-bottom: 40px;
-	padding: 0 20px;
-}
-
-.vr__image {
-	margin-bottom: 40px;
-	width: 100%;
-}
-
-.vr_container {
-	position: relative;
-}
-
-.vr__description {
-	background-color: white;
-	text-align: center;
-}
-
-.vr__paragraph {
-	font-size: 1rem;
-	color: gray;
-}
-
-.vr__headlines {
-	margin-top: 0;
-	text-transform: uppercase;
-	word-spacing: 3px;
-	font-size: 2.4rem;
-	font-weight: 100;
-}
-
-.gallery__heading {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-}
-.gallery__button--white {
-	display: none;
-}
-
-.gallery__button--white:hover {
-	background-color: black;
-	color: whitesmoke;
-}
-
-.gallery__headlines {
-	font-size: 1.5rem;
-	text-transform: uppercase;
-	font-weight: normal;
-	letter-spacing: 4px;
+    margin-top: 80px;
+    margin-bottom: 40px;
+    padding: 0 20px;
 }
 
 @media only screen and (min-width: 1279px) {
-	.vr__section {
-		margin-top: 50px;
-		position: relative;
-		text-align: start;
-	}
-	.vr__image {
-		width: auto;
-		height: 510px;
-	}
-	.vr__description {
-		position: absolute;
-		left: 45%;
-		padding-bottom: 96px;
-		top: 144px;
-		background-color: white;
-		padding-top: 72px;
-		padding-left: 96px;
-		text-align: start;
-	}
+    .vr__section {
+        margin-top: 50px;
+        position: relative;
+        text-align: start;
+        padding: 0;
+    }
+}
 
-	.vr__paragraph {
-		font-size: 1.3rem;
-		color: gray;
-	}
-	.vr__headlines {
-		font-size: 3.3rem;
-	}
-	.gallery__section {
-		margin-top: 192px;
-	}
-	.gallery__button--white {
-		align-items: flex-end;
-		transition: 0.4s;
-		order: 2;
-	}
+.vr__image {
+    margin-bottom: 40px;
+    width: 100%;
+}
 
-	.gallery__heading {
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 40px;
-	}
+@media only screen and (min-width: 1279px) {
+    .vr__image {
+        width: auto;
+        height: 510px;
+    }
+}
 
-	.gallery__headlines {
-		font-size: 2rem;
-	}
+.vr__description {
+    background-color: white;
+    text-align: center;
+}
 
-	.gallery__button--white {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-basis: 140px;
-		height: 40px;
-		color: black;
-		background-color: #fff;
-		font-weight: bold;
-		cursor: pointer;
-		text-decoration: none;
-		border-radius: 2px;
-		text-transform: uppercase;
-	}
+@media only screen and (min-width: 1279px) {
+    .vr__description {
+        position: absolute;
+        left: 45%;
+        padding-bottom: 96px;
+        top: 144px;
+        background-color: white;
+        padding-top: 72px;
+        padding-left: 96px;
+        text-align: start;
+    }
+}
+
+.vr__headlines {
+    margin-top: 0;
+    text-transform: uppercase;
+    word-spacing: 3px;
+    font-size: 2.4rem;
+    font-weight: 100;
+}
+@media only screen and (min-width: 1279px) {
+    .vr__headlines {
+        font-size: 3.3rem;
+    }
+}
+
+.vr__paragraph {
+    font-size: 1rem;
+    color: gray;
+}
+
+@media only screen and (min-width: 1279px) {
+    .vr__paragraph {
+        font-size: 1.3rem;
+        color: gray;
+    }
+}
+
+.gallery__section {
+    padding: 0 20px;
+}
+
+@media only screen and (min-width: 1279px) {
+    .gallery__section {
+        padding: 0;
+        margin-top: 192px;
+    }
+}
+
+.gallery__heading {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+@media only screen and (min-width: 1279px) {
+    .gallery__heading {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 40px;
+    }
+}
+
+.gallery__button--white {
+    display: none;
+}
+
+@media only screen and (min-width: 1279px) {
+    .gallery__button--white {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-basis: 140px;
+        height: 40px;
+        transition: 0.4s;
+        order: 2;
+        color: black;
+        background-color: #fff;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
+        border-radius: 2px;
+        text-transform: uppercase;
+    }
+}
+
+.gallery__button--white:hover {
+    background-color: black;
+    color: whitesmoke;
+}
+
+.gallery__headlines {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: normal;
+    letter-spacing: 4px;
+}
+
+@media only screen and (min-width: 1279px) {
+    .gallery__headlines {
+        font-size: 2rem;
+    }
 }
