--- a/header.css
+++ b/header.css
@@ -5,6 +5,10 @@ body {
     font-family: 'Alata', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.noscroll {
+    overflow: hidden;
+}
+
 a {
     font-size: 0.9rem;
     text-decoration: none;
@@ -15,6 +19,19 @@ ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #c2b8b8d2;
+    border-radius: 6px;
 }
 
 .header {
@@ -118,6 +135,7 @@ ul {
         background-image: url(/images/logo.svg);
         background-size: contain;
         background-repeat: no-repeat;
+        z-index: 3;
     }
 }
 
